Update README, workflow, and requirements to reflect agent role changes; introduce PhysicsSanityAgent and ComparisonValidatorAgent, replacing ScientificValidatorAgent. Revise workflow nodes and documentation for improved clarity and accuracy.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# BiroClick - Multi-Agent Paper Reproduction System
+# ReproLab - Multi-Agent Paper Reproduction System
 # Python dependencies
 
 # ═══════════════════════════════════════════════════════════════════════
