Enhance documentation and schemas by adding a section on preparing papers, including text and figure extraction instructions. Update requirements to include PyMuPDF and Pillow for improved figure validation and image processing. Expand the results analyzer agent documentation with a detailed vision model comparison protocol, outlining preparation steps, comparison questions, and confidence scoring for visual assessments. Revise the FigureComparison schema to incorporate visual similarity and feature matching details, improving clarity in figure analysis.

--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,12 @@ h5py>=3.8.0
 # ═══════════════════════════════════════════════════════════════════════
 pypdf>=3.0.0
 pdfplumber>=0.9.0
+PyMuPDF>=1.23.0  # For figure extraction from PDFs
+
+# ═══════════════════════════════════════════════════════════════════════
+# Image Processing (for figure validation)
+# ═══════════════════════════════════════════════════════════════════════
+Pillow>=10.0.0  # Image analysis for vision model input validation
 
 # ═══════════════════════════════════════════════════════════════════════
 # Utilities
