Enhance documentation and implementation details for platform support and installation procedures
This commit introduces a comprehensive update to the `README.md`, `guidelines.md`, and `workflow.md` files, detailing the implementation status of various components and clarifying platform support levels, particularly for Windows users. It adds a new section on installation instructions, emphasizing the use of conda for Meep installation and providing platform-specific recommendations. Additionally, the `requirements.txt` file is updated with pinned versions for dependencies to ensure reproducibility. These changes improve clarity and usability for users setting up the ReproLab environment.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,94 @@
 # ReproLab - Multi-Agent Paper Reproduction System
-# Python dependencies
-
-# ═══════════════════════════════════════════════════════════════════════
-# Core LangGraph/LangChain
-# ═══════════════════════════════════════════════════════════════════════
-langgraph>=0.2.0
-langchain>=0.3.0
-langchain-anthropic>=0.3.0  # Primary: Claude Opus 4.5 for all agents (v1)
-langchain-openai>=0.2.0     # Optional: for future multi-model support
-
-# ═══════════════════════════════════════════════════════════════════════
-# FDTD Simulation
-# ═══════════════════════════════════════════════════════════════════════
-# Note: Meep requires separate installation via conda or system packages
-# conda install -c conda-forge meep
-# See: https://meep.readthedocs.io/en/latest/Installation/
+# Python dependencies with pinned versions for reproducibility
 #
-# MEEP VERSION COMPATIBILITY:
-# This system is tested with Meep 1.28+. Key API requirements:
-# - mp.FluxRegion() syntax
+# Installation: pip install -r requirements.txt
+#
+# For development with looser constraints, see requirements-dev.txt
+
+# ═══════════════════════════════════════════════════════════════════════
+# Core LangGraph/LangChain (pinned - APIs change frequently)
+# ═══════════════════════════════════════════════════════════════════════
+# LangGraph and LangChain versions are tightly coupled
+# Tested with these specific versions - update together
+langgraph==0.2.55
+langchain==0.3.12
+langchain-core==0.3.25
+langchain-anthropic==0.3.0    # Primary: Claude Opus 4.5 for all agents (v1)
+langchain-openai==0.2.14      # Optional: for future multi-model support
+
+# ═══════════════════════════════════════════════════════════════════════
+# FDTD Simulation - Meep
+# ═══════════════════════════════════════════════════════════════════════
+# IMPORTANT: Meep requires separate installation via conda
+# Do NOT install via pip - it won't work correctly
+#
+# Installation:
+#   conda install -c conda-forge meep=1.28.0
+#   
+# Or for parallel support:
+#   conda install -c conda-forge meep=1.28.0 mpi4py openmpi
+#
+# This system is tested with Meep 1.28.x. Key API requirements:
+# - mp.FluxRegion() syntax (changed in 1.20+)
 # - mp.Medium() material definitions  
 # - mp.Simulation() class structure
-# If using older Meep versions, generated code may require manual adjustments.
-# Recommended: meep>=1.28.0
+# - Harminv for resonance analysis
+#
+# If using Meep < 1.28, generated code may require manual adjustments.
+#
+# Verify your installation:
+#   python -c "import meep; print(meep.__version__)"
 
 # ═══════════════════════════════════════════════════════════════════════
-# Scientific Computing
+# Scientific Computing (pinned for numerical consistency)
 # ═══════════════════════════════════════════════════════════════════════
-numpy>=1.24.0
-scipy>=1.11.0
-pandas>=2.0.0
+numpy==1.26.4              # Meep requires numpy; pinned for compatibility
+scipy==1.14.1              # Optimization, interpolation
+pandas==2.2.3              # Data manipulation
 
 # ═══════════════════════════════════════════════════════════════════════
 # Visualization
 # ═══════════════════════════════════════════════════════════════════════
-matplotlib>=3.7.0
-seaborn>=0.12.0
+matplotlib==3.9.2          # Plotting (must not use plt.show() in generated code)
+seaborn==0.13.2            # Statistical visualization
 
 # ═══════════════════════════════════════════════════════════════════════
 # Data Storage
 # ═══════════════════════════════════════════════════════════════════════
-h5py>=3.8.0
+h5py==3.12.1               # HDF5 for field data storage
 
 # ═══════════════════════════════════════════════════════════════════════
 # PDF Processing (for paper text extraction)
 # ═══════════════════════════════════════════════════════════════════════
-pypdf>=3.0.0
-pdfplumber>=0.9.0
-PyMuPDF>=1.23.0  # For figure extraction from PDFs
+pypdf==5.1.0               # Basic PDF text extraction
+pdfplumber==0.11.4         # Advanced PDF parsing with tables
+PyMuPDF==1.25.1            # Figure extraction from PDFs (fitz)
 
 # ═══════════════════════════════════════════════════════════════════════
-# Image Processing (for figure validation)
+# Image Processing
 # ═══════════════════════════════════════════════════════════════════════
-Pillow>=10.0.0  # Image analysis for vision model input validation
+Pillow==11.0.0             # Image analysis for vision model input validation
 
 # ═══════════════════════════════════════════════════════════════════════
 # Utilities
 # ═══════════════════════════════════════════════════════════════════════
-pydantic>=2.0.0
-python-dotenv>=1.0.0
-rich>=13.0.0  # For nice terminal output
-tqdm>=4.65.0  # Progress bars
+pydantic==2.10.3           # Data validation for schemas
+python-dotenv==1.0.1       # Environment variable management
+rich==13.9.4               # Pretty terminal output
+tqdm==4.67.1               # Progress bars
 
 # ═══════════════════════════════════════════════════════════════════════
-# Development
+# HTTP/Networking (for figure downloads)
 # ═══════════════════════════════════════════════════════════════════════
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-ruff>=0.1.0
-mypy>=1.0.0
+requests==2.32.3           # HTTP client for figure downloads
+urllib3==2.2.3             # URL handling
 
+# ═══════════════════════════════════════════════════════════════════════
+# JSON Schema Validation
+# ═══════════════════════════════════════════════════════════════════════
+jsonschema==4.23.0         # Validate plan/progress/assumptions against schemas
+
+# ═══════════════════════════════════════════════════════════════════════
+# Typing Extensions (for Python 3.9/3.10 compatibility)
+# ═══════════════════════════════════════════════════════════════════════
+typing_extensions==4.12.2  # NotRequired, TypedDict improvements
