Enhance documentation and functionality for JSON schema type generation and user interaction
This commit introduces several updates across the `README.md`, `requirements-dev.txt`, and various documentation files. Key changes include the addition of a one-time setup command for generating Python types from JSON schemas, along with a note on re-running the script when schemas are modified. The `requirements-dev.txt` is updated to include `datamodel-code-generator` for TypedDict generation. Additionally, the `guidelines.md` and `workflow.md` files are revised to clarify the vision comparison process and the handling of user interactions, including timeout management and checkpointing. These enhancements improve usability and provide clearer guidance for users working with the LangGraph framework.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -35,6 +35,11 @@ pandas-stubs==2.2.3.241126
 # mkdocs-material==9.5.0   # Material theme (optional)
 
 # ═══════════════════════════════════════════════════════════════════════
+# Schema Type Generation
+# ═══════════════════════════════════════════════════════════════════════
+datamodel-code-generator>=0.25.0  # Generate TypedDicts from JSON schemas
+
+# ═══════════════════════════════════════════════════════════════════════
 # Debugging
 # ═══════════════════════════════════════════════════════════════════════
 ipython==8.30.0            # Interactive Python shell
