Add grandalf for LangGraph ASCII visualization in requirements-dev.txt
This commit adds the grandalf package to the development requirements for improved graph layout capabilities in LangGraph ASCII visualizations. This enhancement supports better visualization tools for the project, contributing to overall clarity and usability in data representation.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -46,6 +46,11 @@ ipython==8.30.0            # Interactive Python shell
 ipdb==0.13.13              # IPython debugger
 
 # ═══════════════════════════════════════════════════════════════════════
+# Visualization
+# ═══════════════════════════════════════════════════════════════════════
+grandalf>=0.7              # Graph layout for LangGraph ASCII visualization
+
+# ═══════════════════════════════════════════════════════════════════════
 # Notebook Support (optional - for experimentation)
 # ═══════════════════════════════════════════════════════════════════════
 # jupyter==1.1.1           # Jupyter notebooks (optional)
